--- a/app.json
+++ b/app.json
@@ -7,29 +7,29 @@
         "video-extract",
         "pyrogram"
     ],
-    "repository": "https://github.com/XdityaHalder/SankiMusic",
-    "success_url": "https://t.me/AdityaDiscus",
+    "repository": "https://github.com/uniquekh/TXT-extracter.git",
+    "success_url": "https://t.me/getallmodapk",
     "stack": "container",
     "env": {
         "API_ID": {
             "description": "𝑬𝒏𝒕𝒆𝒓 𝒀𝒐𝒖𝒓 𝑨𝒑𝒊 𝑰𝑫",
-            "value": "29707621"
+            "value": "21179966"
         },
         "API_HASH": {
             "description": "𝑬𝒏𝒕𝒆𝒓 𝒀𝒐𝒖𝒓 𝑨𝒑𝒊 𝑯𝒂𝒔𝒉",
-            "value": "a1f31eeb31a0b9e36f551da6b8b85752"
+            "value": "d97919fb0a3c725e8bb2a25bbb37d57c"
         },
         "BOT_TOKEN": {
             "description": "𝑬𝒏𝒕𝒆𝒓 𝒀𝒐𝒖𝒓 𝑩𝒐𝒕 𝑻𝒐𝒌𝒆𝒏",
-            "value": "6634971116:AAGhU6IQBREjXdliqJr9CGh1ZCLpoYbGP5o"
+            "value": "6796353747:AAGhACxmk8It_apZdjIb8VfjFj_Bl8S8Qm8"
         },
         "OWNER_ID": {
             "description": "𝑼𝒔𝒆𝒓 𝑰𝑫 𝑶𝒇 𝑩𝒐𝒕 𝑶𝒘𝒏𝒆𝒓",
-            "value": "6707073614"
+            "value": "7326397503"
         },
         "SUDO_USERS": {
             "description": "𝑺𝒖𝒅𝒐 𝑰𝑫'𝒔 (𝒀𝒐𝒖 𝑪𝒂𝒏 𝑨𝒅𝒅 𝑴𝒖𝒍𝒕𝒊𝒑𝒍𝒆 𝑩𝒚 𝑮𝒊𝒗𝒊𝒏𝒈 𝑺𝒑𝒂𝒄𝒆)",
-            "value": "6707073614 1406300051 6801378994 870101201"
+            "value": "7326397503 5702090016"
         }
     },
     "addons": [],
